Prevent header loader from jumping

--- a/less/mosaico/header.less
+++ b/less/mosaico/header.less
@@ -191,6 +191,7 @@
     padding-left: 8px;
     text-decoration: none;
     color: inherit;
+    height: 32px;
 
     @media (min-width: @breakpoint-2col) {
       grid-row-start: 2;
